[tool.poetry]
name = "rl_recsys"
version = "0.1.0"
description = ""
authors = ["Asr419 <aayush.singha.roy@iitd.ac.in>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
pandas = "^1.5.1"
numpy = "^1.23.4"
pomdp-py = "^1.3.2"
tensorflow = "^2.10.0"
recsim = "^0.2.4"
seaborn = "^0.12.1"
plotly = "^5.11.0"
spotipy = "^2.21.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
