[tool.poetry]
name = "rl_recsys"
version = "0.1.0"
description = ""
authors = ["damicoedoardo <damicoedoardo95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
gymnasium = "^0.27.1"
torch = "^1.13.1"
scikit-learn = "^1.2.1"
numpy = "^1.24.2"
pyarrow = "^11.0.0"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
PyYAML = "^6.0"
wandb = "^0.14.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
pytest = "^7.2.1"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
